gym/maze/slurm/41506.cerulean.err
  File "/home/u253954/SSM_benchmark/gym/maze/train.py", line 231
    print(f"Finished in: {time.time() - start)} seconds"
         ^
SyntaxError: '(' was never closed
